[package]
name = "ps2"
version = "0.2.0"
description = "A general PS/2 device driver for nightly Rust."
readme = "README.md"
repository = "https://github.com/0xSiO/ps2-rs"
categories = ["no-std", "hardware-support"]
keywords   = ["keyboard", "mouse", "ps2", "driver", "no_std"]
license = "MIT"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
x86_64 = "0.14.3"
